# rCTRL

./: .clang-format  .gitignore  README.md  rctrl.code-workspace  test.http
rctrl/rctrl/: Cargo.toml
rctrl/rctrl/src/: app.rs  gui.rs  lib.rs  ws_lock.rs
rctrl/rctrl/src/gui/: gui.rs  gui_elem.rs  lifecycle_manager.rs  log.sublime-syntax  logger.rs  logger_hl.rs  mod.rs
rctrl/rctrl/src/gui/abort_button/: abort_button.rs  mod.rs
rctrl/rctrl/src/gui/fire_button/: fire_button.rs  mod.rs
rctrl/rctrl/src/gui/lifecycle_manager/: lifecycle_manager.rs  mod.rs
rctrl/rctrl/src/gui/logger/: logger.rs  mod.rs
rctrl/rctrl/src/gui/pind/: mod.rs  pind.rs
rctrl/rctrl/src/gui/rstate/: mod.rs  rstate.rs
rctrl/rctrl/src/gui/valve_control/: mod.rs  valve_control.rs
ros2/src/rdata/: CMakeLists.txt  package.xml
ros2/src/rdata/include/rdata/: except.hpp  iface.hpp  logger.hpp
ros2/src/rdata/lib/: influx_client.cpp  influx_client.hpp  influx_client.tpp  influx_exception.cpp  influx_exception.hpp  rdata_node.cpp  rdata_node.hpp  rdata_node.tpp
ros2/src/rdata/msg/: LogF64.msg  LogU64.msg
ros2/src/rdata/src/: except.cpp  logger.cpp  main.cpp
ros2/src/rdata/vsensor/lib/: vsensor_node.cpp  vsensor_node.hpp  vsensor_node.tpp
ros2/src/rdata/vsensor/src/: main.cpp
ros2/src/rdata_msgs/: CMakeLists.txt  package.xml
ros2/src/rdata_msgs/msg/: LogBool.msg
ros2/src/rdata_msgs/srv/: CreateLogger.srv
ros2/src/rdata_vsensor/: CMakeLists.txt  package.xml
ros2/src/rdata_vsensor/lib/: node.cpp  vsensor_node.hpp
ros2/src/rdata_vsensor/src/: main.cpp  node.cpp  vsensor_node.cpp
ros2/src/recu/: CMakeLists.txt  package.xml
ros2/src/recu/lib/: node.cpp  node.hpp
ros2/src/recu/lib/rdata/: iface.hpp
ros2/src/recu/src/: main.cpp
ros2/src/rgpio/: CMakeLists.txt  package.xml
ros2/src/rgpio/include/rgpio/: input.hpp  output.hpp
ros2/src/rgpio/lib/: gpio.hpp  helper.cpp  helper.hpp  iface.hpp  input.hpp  input.tpp  node.cpp  node.hpp  node.tpp  output.hpp  output.tpp  real.cpp  real.hpp  virtual.cpp  virtual.hpp
ros2/src/rgpio/src/: input.cpp  main.cpp  output.cpp
ros2/src/rgpio/src/gpio/: gpio.cpp  real.cpp  virtual.cpp
ros2/src/rgpio/src/util/: util.cpp
ros2/src/rgpio_example/: CMakeLists.txt  gpio.toml  package.xml
ros2/src/rgpio_example/lib/: node.cpp  node.hpp
ros2/src/rgpio_example/src/: main.cpp
ros2/src/ri2c/: CMakeLists.txt  package.xml
ros2/src/ri2c/include/ri2c/: test.hpp
ros2/src/ri2c/lib/: ads1014.cpp  ads1014.hpp  except.hpp  node.cpp  node.hpp  thermocouple.c  thermocouple.h
ros2/src/ri2c/src/: main.cpp
ros2/src/ri2c_msgs/: CMakeLists.txt  package.xml
ros2/src/rstate/: CMakeLists.txt  README.md  config.toml  package.xml
ros2/src/rstate/action/: Transition.action
ros2/src/rstate/lib/: node.cpp  node.hpp  rstate_cmd.cpp  rstate_cmd.hpp  rstate_except.hpp  rstate_node.cpp  rstate_node.hpp  rstate_state.cpp  rstate_state.hpp  rstate_state_activating.cpp  rstate_state_active.cpp  rstate_state_armed.cpp  rstate_state_arming.cpp  rstate_state_cleaning_up.cpp  rstate_state_configuring.cpp  rstate_state_deactivating.cpp  rstate_state_disarming.cpp  rstate_state_error_processing.cpp  rstate_state_finalized.cpp  rstate_state_inactive.cpp  rstate_state_shutting_down.cpp  rstate_state_unconfigured.cpp  rstate_util.cpp  rstate_util.hpp
ros2/src/rstate/lib/action/: server.hpp
ros2/src/rstate/lib/cmd/: cmd.hpp  cmd_srv.cpp  cmd_srv.hpp  cmd_srv_client.hpp  service.cpp  service.hpp
ros2/src/rstate/lib/state/: activating.cpp  active.cpp  armed.cpp  arming.cpp  cleaning_up.cpp  configuring.cpp  deactivating.cpp  disarming.cpp  error_processing.cpp  (+7 more)
ros2/src/rstate/msg/: NetworkTransitionDescription.msg
ros2/src/rstate/src/: main.cpp
ros2/src/rstate/srv/: GetAvailableNetworkStates.srv  GetAvailableNetworkTransitions.srv  NetworkTransitionCancelGoal.srv  TransitionSendGoal.srv
ros2/src/rstate_msgs/: CMakeLists.txt  package.xml
ros2/src/rstate_msgs/msg/: NetworkTransition.msg  NetworkTransitionEvent.msg  NetworkTransitionFeedback.msg
ros2/src/rstate_msgs/srv/: GetNetworkState.srv  NetworkTransitionSendGoal.srv
ros2/src/rutil/: CMakeLists.txt  package.xml
ros2/src/rutil/src/: except.cpp  fmt.cpp  toml.cpp
src/: CMakeLists.txt  package.xml
src/cmake/: Conan.cmake
src/rctrl/: Cargo.toml  index.html  web_start.sh
src/rctrl/lc_client/lib/: rctrl_lc_client.cpp  rctrl_lc_client.hpp
src/rctrl/rctrl/: Cargo.toml
src/rctrl/rctrl/src/: app.rs  gui.rs  lib.rs
src/rctrl/rctrl_gui/: Cargo.toml
src/rctrl/rctrl_gui/src/: gui.rs  gui_elem.rs  gui_elems.rs  lc.rs  lib.rs  main.rs
src/rctrl/rctrl_rosbridge/src/: lib.rs  protocol.rs
src/rctrl/util/lib/: rctrl_except.hpp  rctrl_fmt.hpp  rctrl_util.hpp  util.hpp
src/rdata/example/gui/: Cargo.toml  index.html  web_build.sh  web_start.sh
src/rdata/iface/lib/: ataIFace.hpp  rdata_iface.hpp
src/rdata/lib/: InfluxClientException.cpp  RDataNode.cpp  RDataNode.hpp  RDataNode.tpp
src/rdata/main/lib/: RDataNode.cpp  RDataNode.hpp  influx_client.cpp  influx_client.hpp  influx_client.tpp  influx_client_exception.cpp  rdata_node.cpp  rdata_node.hpp  rdata_node.tpp
src/rdata/main/src/: main.cpp
src/rdata/msg/: LogStr.msg
src/rdata/src/: main.cpp
src/rdata_example/src/: main.cpp
src/rdata_iface/: RDataIFace.hpp
src/rdata_vsensor/lib/: VSensorNode.cpp  VSensorNode.hpp
src/rocketdata/: CMakeLists.txt  package.xml
src/rocketdata/lib/: InfluxClient.cpp  InfluxClient.hpp  InfluxClient.tpp  InfluxClientException.cpp  InfluxClientException.hpp  RocketDataNode.cpp  RocketDataNode.hpp  RocketDataNode.tpp  RosNode.cpp  RosNode.hpp
src/rocketdata/msg/: LogInt64.msg
src/rocketdata/src/: main.cpp
src/rocketdata/src/rocketdata/: main.cpp
src/rocketdata_virtual_sensor/lib/: VirtualSensorNode.cpp  VirtualSensorNode.hpp
src/rocketdata_virtual_sensor/src/: main.cpp
src/rutil/rutil/lib/: rutil.hpp  rutil_except.hpp  rutil_fmt.hpp
src/rutil/rutil_lc_client/lib/: rutil_lc_client.cpp  rutil_lc_client.hpp  rutil_lc_client.tpp
src/test_pkg/: CMakeLists.txt
src/test_pkg/cmake/: Conan.cmake
(+166 files in other folders)
