[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
# actix-web-actors = "3"
# actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"

serde = "1.0.80"
serde_derive = "1.0.115"
serde_json = "1.0.13"
strum = "0.23"
strum_macros = "0.23"
